--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -36,10 +36,12 @@ body {
     left: -100%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg,
-            transparent,
-            rgba(255, 255, 255, 0.4),
-            transparent);
+    background: linear-gradient(
+        90deg,
+        transparent,
+        rgba(255, 255, 255, 0.4),
+        transparent
+    );
     transition: 0.5s;
 }
 
@@ -55,8 +57,8 @@ body {
     cursor: default;
 }
 
-.navbar a {
-    color: #fff;
+.navbar a  {
+    color: #ffffff;
     font-size: 18px;
     text-decoration: none;
     margin-left: 35px;
