--- a/public/css/admindashboard.css
+++ b/public/css/admindashboard.css
@@ -115,3 +115,14 @@ button {
 button:hover {
     background-color: #da190b;
 }
+
+/* Custom Container Style */
+.container {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    margin-bottom: 10px;
+}
