--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -35,7 +35,7 @@ body {
     position: absolute;
     top: 0;
     left: -100%;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     background: linear-gradient(
         90deg,
