--- a/public/css/crudDoctor.css
+++ b/public/css/crudDoctor.css
@@ -44,7 +44,7 @@ body {
     top: 20px;
     right: 20px;
     z-index: 1000;
-  
+}
 /* Reset default browser styles */
 * {
     box-sizing: border-box;
