--- a/public/css/antrian.css
+++ b/public/css/antrian.css
@@ -7,8 +7,8 @@ body {
     color: #333;
 }
 
-.container {
-    max-width: 600px;
+.container-l {
+    width: 500px;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
@@ -16,11 +16,6 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-    text-align: center;
-    color: #007bff;
-    margin-bottom: 20px;
-}
 
 .alert-success {
     color: #155724;
@@ -55,9 +50,9 @@ select {
 input[type="text"]:focus,
 input[type="email"]:focus,
 select:focus {
-    border-color: #007bff;
+    border-color: #000000;
     outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 button {
@@ -66,7 +61,7 @@ button {
     padding: 10px 15px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: #000913;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -74,7 +69,9 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #000101;
 }
+
+
 
 /* Navbar styles */
