--- a/public/css/consul.css
+++ b/public/css/consul.css
@@ -73,14 +73,52 @@ form button {
     font-size: 1rem;
 }
 
-form button:hover {
-    background-color: #45a049;
+#consultation {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
 }
 
-footer {
-    background-color: #333;
+#consultation form {
+    display: flex;
+    flex-direction: column;
+}
+
+#consultation form label {
+    margin-bottom: 10px;
+}
+
+#consultation form input,
+#consultation form textarea {
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 16px;
+}
+
+#consultation form button {
+    padding: 10px 20px;
+    background-color: #000000;
     color: white;
-    text-align: center;
-   
-    margin-top: auto;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px;
+    background-color: #000000;
+    color: white;
+    border-radius: 5px;
+    display: none; /* Awalnya disembunyikan */
+    z-index: 1000; /* Atur tingkat z untuk menutupi elemen lain */
 }
